Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-9309

Start Menu uses wrong selected item color

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.0
    • Services
    • Luna Theme
      Lautus Theme

    Description

      When using the theme service, it incorrectly uses the selected item color for the start menu. It uses a very light version of the correct color but it's still conflicting with the white text on the start menu. A screen shot might be more descriptive than the description.

      Attachments

        1. CORE-9309.patch
          2 kB
        2. Lantus_fixed.png
          Lantus_fixed.png
          81 kB
        3. Lautus.png
          Lautus.png
          69 kB
        4. Luna.png
          Luna.png
          57 kB
        5. toolbar.patch
          2 kB

        Activity

          People

            AmineKhaldi AmineKhaldi
            Pi_User5 Pi_User5
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: