[RSHELL][COMCTL32] Fix wrong selected item color used by the Start Menu. Brought to you by Stefano Toncich with minor changes by me. CORE-9309

svn path=/trunk/; revision=67380